--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -81,3 +81,22 @@
     padding-top: 4px;
   }
 }
+/* 
+.docs-layout {
+  width: 100%;
+  height: 100%;
+}
+
+.docs-sidebar {
+  position: fixed;
+  top: 64px;
+  bottom: 0;
+  height: 100%;
+}
+
+.docs-children{
+  position: relative;
+  width: calc(100% - var(--sidebar-width));
+  left: var(--sidebar-width);
+  background-color: green;
+} */
