style(docs): update code block appearance in alert component

--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -182,3 +182,8 @@ button:hover {
     )
     transparent;
 }
+
+
+.alert-parent .code-block code {
+  @apply border-2 dark:border-neutral-700 border-neutral-200 bg-transparent !px-0;
+}
