--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -191,3 +191,10 @@ button:hover {
     @apply dark:!border-0;
   }
 }
+
+[dir="rtl"] .prose blockquote {
+  border-left-width: 0;
+  border-right-width: 4px;
+  padding-left: 0;
+  padding-right: 1.5rem;
+}
